--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,31 @@
-language: go
-
-go:
-  - 1.13.6
-
-branches:
-  only:
-    - dev
-    - feature/integrate-travisCI  
-
-env:
-  CGO_CXXFLAGS="-g -rdynamic -std=c++17 -o -pthread"
-
-jobs:
+matrix:
   include:
-    - stage: build
-      script: go build ./cmd/server
-    - stage: test
-      script: go test ./service -v
-    - stage: push-docker-registry
-      script:
-        - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        - docker build -t zpx-godbee .
-        - docker tag zpx-cannon $DOCKER_USER/zpx-godbee:latest
-        - docker push $DOCKER_USER/zpx-godbee:latest
+    - language: cpp
+      compiler: 
+        - clang
+        - gcc
+      std:
+        - c++17
+    - language: go
+      go:
+      - 1.13.6
+      env:
+        CGO_CXXFLAGS="-g -rdynamic -std=c++17 -o -pthread"
+      branches:
+        only:
+          - dev
+          - feature/integrate-travisCI
+      jobs:
+      include:
+        - stage: build
+          script: go build ./cmd/server
+        - stage: test
+          script: go test ./service -v
+        - stage: push-docker-registry
+          script:
+            - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+            - docker build -t zpx-godbee .
+            - docker tag zpx-cannon $DOCKER_USER/zpx-godbee:latest
+            - docker push $DOCKER_USER/zpx-godbee:latest
+  
+
